Closed Bug 163850 Opened 23 years ago Closed 23 years ago

focusing on text input field will cause mozilla hangs

Categories

(Core :: Disability Access APIs, defect)

Sun
Solaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.2alpha

People

(Reporter: yuanyi21, Assigned: yinbolian)

References

Details

Attachments

(1 file)

when work with gnopernicus or simple-at.
Blocks: gnoper
mass change of QA, milestone, platform.
Status: NEW → ASSIGNED
QA Contact: dsirnapalli → mindy.liu
Target Milestone: --- → mozilla1.2alpha
Attached patch patchSplinter Review
checked in trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: