Bug 163850, focusing on text input field will cause mozilla hangs. This patch is not in the current Default Build of Mozilla.